# coc-mypy-wrong-buffer

./: README.md  bar_module.py  foo_module.py  main.py  pyproject.toml
.vim/: coc-settings.json
