[tool.poetry]
name = "coc-mypy-wrong-buffer"
version = "0.1.0"
description = ""
authors = ["TatchNicolas <TatchNicolas@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
